Fix spacing between features-row

--- a/themes/default/styles.scss
+++ b/themes/default/styles.scss
@@ -298,6 +298,15 @@ img.centered.download-buttons-store {
     margin: 8.5px;
   }
 
+  .features-row {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
+  .col-sm-4 {
+    padding-top: 15px;
+  }
+
 }
 
 //
